--- a/all.html
+++ b/all.html
@@ -313,12 +313,11 @@
                 <a href="https://www.spymc.xyz/search.html" class="portal-link" target="_blank">View Rankings <i class="fas fa-arrow-right"></i></a>
             </div>
 
-            <div class="portal-grid">
             <div class="portal-card">
-                <div class="portal-icon"><i class="fas fa-trophy"></i></div>
-                <h3 class="portal-title">Partner</h3>
-                <p class="portal-desc">SpyMC is proud to be a partner, actively supporting and promoting your services as part of our ongoing collaboration</p>
-                <a href="https://www.spymc.xyz/partner.html" class="portal-link" target="_blank">View Rankings <i class="fas fa-arrow-right"></i></a>
+                <div class="portal-icon"><i class="fas fa-handshake"></i></div>
+                <h3 class="portal-title">PARTNER</h3>
+                <p class="portal-desc">SpyMC is proud to be a partner, actively supporting and promoting your services as part of our ongoing collaboration.</p>
+                <a href="https://www.spymc.xyz/partner.html" class="portal-link" target="_blank">View Partners <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="portal-card">
@@ -363,25 +362,25 @@
                 <a href="https://www.spymc.xyz/follow" class="portal-link" target="_blank">Follow Us <i class="fas fa-arrow-right"></i></a>
             </div>
 
-             <div class="portal-card">
-                <div class="portal-icon"><i class="fas fa-user-secret"></i></div>
+            <div class="portal-card">
+                <div class="portal-icon"><i class="fas fa-star"></i></div>
                 <h3 class="portal-title">RANKS INFO</h3>
                 <p class="portal-desc">Learn about the exclusive achievement rank perks and how to obtain this elite status.</p>
                 <a href="https://status.spymc.xyz/ranks.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
             </div>
 
-             <div class="portal-card">
-                <div class="portal-icon"><i class="fas fa-heart"></i></div>
+            <div class="portal-card">
+                <div class="portal-icon"><i class="fas fa-camera"></i></div>
                 <h3 class="portal-title">MEDIA INFO</h3>
                 <p class="portal-desc">Learn about the exclusive server media rank perks and how to obtain this elite status.</p>
-                <a href="https://www.spymc.xyz/media.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
+                <a href="https://www.spymc.xyz/media.html" class="portal-link" target="_blank">Media Info <i class="fas fa-arrow-right"></i></a>
             </div>
 
             <div class="portal-card">
-                <div class="portal-icon"><i class="fas fa-heart"></i></div>
-                <h3 class="portal-title">Players Count</h3>
-                <p class="portal-desc">Check real-time server player status, how to many player are playing in this elite status.</p>
-                <a href="https://www.spymc.xyz/players.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
+                <div class="portal-icon"><i class="fas fa-users"></i></div>
+                <h3 class="portal-title">PLAYERS COUNT</h3>
+                <p class="portal-desc">Check real-time server player status and see how many players are currently online.</p>
+                <a href="https://www.spymc.xyz/players.html" class="portal-link" target="_blank">View Players <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="portal-card">
