--- a/all.html
+++ b/all.html
@@ -382,6 +382,13 @@
                 <p class="portal-desc">Check real-time server player status and see how many players are currently online.</p>
                 <a href="https://www.spymc.xyz/players.html" class="portal-link" target="_blank">View Players <i class="fas fa-arrow-right"></i></a>
             </div>
+
+            <div class="portal-card">
+                <div class="portal-icon"><i class="fas fa-crosshairs"></i></div>
+                <h3 class="portal-title">UNBAN APPEAL</h3>
+                <p class="portal-desc">Submit your appeal through our Discord server to request a review of your ban</p>
+                <a href="https://www.spymc.xyz/unban" class="portal-link" target="_blank">Appeal <i class="fas fa-arrow-right"></i></a>
+            </div>
             
             <div class="portal-card">
                 <div class="portal-icon"><i class="fas fa-server"></i></div>
