--- a/Shop.html
+++ b/Shop.html
@@ -559,7 +559,8 @@
         </div>
 
         <div class="discord-note">
-            <p>Need help? Join our <a href="https://discord.spymc.xyz" class="discord-link" target="_blank">Discord</a> for support.</p>
+            <p>All purchases are processed through our Discord server. <br>
+            Need help? Join our <a href="https://discord.spymc.xyz" class="discord-link" target="_blank">Discord</a> for support.</p>
         </div>
 
         <footer>
