--- a/shop.html
+++ b/shop.html
@@ -431,7 +431,7 @@
             <div class="rank-card">
                 <div class="rank-header">
                     <div class="rank-name">SNIPER</div>
-                    <div class="rank-price">$5.49 <span>/ ₹451</span></div>
+                    <div class="rank-price">$5.49 <span>/ ₹451 (monthly)</span></div>
                 </div>
                 <p class="rank-description">
                     The ultimate prestige rank with exclusive cosmetics, VIP areas, and priority access.
@@ -463,7 +463,7 @@
             <div class="rank-card">
                 <div class="rank-header">
                     <div class="rank-name">CORE</div>
-                    <div class="rank-price">$4.39 <span>/ ₹363</span></div>
+                    <div class="rank-price">$4.39 <span>/ ₹363 (monthly)</span></div>
                 </div>
                 <p class="rank-description">
                     Premium rank with enhanced gameplay features and special privileges.
@@ -495,7 +495,7 @@
             <div class="rank-card">
                 <div class="rank-header">
                     <div class="rank-name">CYBER</div>
-                    <div class="rank-price">$3.84 <span>/ ₹313</span></div>
+                    <div class="rank-price">$3.84 <span>/ ₹313 (monthly)</span></div>
                 </div>
                 <p class="rank-description">
                     Enhanced rank with special cosmetics and gameplay advantages.
