--- a/shop.html
+++ b/shop.html
@@ -431,7 +431,7 @@
             <div class="rank-card">
                 <div class="rank-header">
                     <div class="rank-name">SNIPER</div>
-                    <div class="rank-price">$5.49 <span>/ ₹451 (monthly)</span></div>
+                    <div class="rank-price">$5.49 <span>/ ₹451</span></div>
                 </div>
                 <p class="rank-description">
                     The ultimate prestige rank with exclusive cosmetics, VIP areas, and priority access.
@@ -443,7 +443,7 @@
                     </div>
                     <div class="feature">
                         <i class="fas fa-lock-open"></i>
-                        <span>VIP-only areas</span>
+                        <span>Monthly Ranks</span>
                     </div>
                     <div class="feature">
                         <i class="fas fa-bolt"></i>
@@ -463,7 +463,7 @@
             <div class="rank-card">
                 <div class="rank-header">
                     <div class="rank-name">CORE</div>
-                    <div class="rank-price">$4.39 <span>/ ₹363 (monthly)</span></div>
+                    <div class="rank-price">$4.39 <span>/ ₹363</span></div>
                 </div>
                 <p class="rank-description">
                     Premium rank with enhanced gameplay features and special privileges.
@@ -471,7 +471,7 @@
                 <div class="features-list">
                     <div class="feature">
                         <i class="fas fa-shield-alt"></i>
-                        <span>Extended claims</span>
+                        <span>Exclusive Core tag</span>
                     </div>
                     <div class="feature">
                         <i class="fas fa-home"></i>
@@ -479,7 +479,7 @@
                     </div>
                     <div class="feature">
                         <i class="fas fa-rocket"></i>
-                        <span>Faster flying</span>
+                        <span>Monthly Ranks</span>
                     </div>
                     <div class="feature">
                         <i class="fas fa-paint-brush"></i>
@@ -495,7 +495,7 @@
             <div class="rank-card">
                 <div class="rank-header">
                     <div class="rank-name">CYBER</div>
-                    <div class="rank-price">$3.84 <span>/ ₹313 (monthly)</span></div>
+                    <div class="rank-price">$3.84 <span>/ ₹313</span></div>
                 </div>
                 <p class="rank-description">
                     Enhanced rank with special cosmetics and gameplay advantages.
@@ -503,11 +503,11 @@
                 <div class="features-list">
                     <div class="feature">
                         <i class="fas fa-robot"></i>
-                        <span>Cyber-themed cosmetics</span>
+                        <span>Exclusive Cyber tag</span>
                     </div>
                     <div class="feature">
                         <i class="fas fa-tools"></i>
-                        <span>Special crafting recipes</span>
+                        <span>Monthly Ranks</span>
                     </div>
                     <div class="feature">
                         <i class="fas fa-user-shield"></i>
