--- a/shop.html
+++ b/shop.html
@@ -452,7 +452,7 @@
             <p class="subtitle">Upgrade your experience with premium ranks featuring exclusive perks and cosmetics</p>
         </header>
 
-        <h2 class="section-title">PREMIUM RANKS</h2>
+        <h2 class="section-title">PREMIUM RANKS MONTHLY</h2>
         <div class="ranks-grid">
             <!-- Sniper Rank -->
             <div class="rank-card">
