--- a/shop.html
+++ b/shop.html
@@ -448,7 +448,7 @@
     <div class="container">
         <header>
             <img src="https://i.ibb.co/tMF05rbH/image69.png" alt="SpyMC" class="logo">
-            <h1>SPYMC RANK SHOP</h1>
+            <h1>SPYMC SHOP</h1>
             <p class="subtitle">Upgrade your experience with premium ranks featuring exclusive perks and cosmetics</p>
         </header>
 
