--- a/all.html
+++ b/all.html
@@ -385,9 +385,9 @@
 
             <div class="portal-card">
                 <div class="portal-icon"><i class="fas fa-crosshairs"></i></div>
-                <h3 class="portal-title">UNBAN APPEAL</h3>
-                <p class="portal-desc">Submit your appeal through our Discord server to request a review of your ban</p>
-                <a href="https://www.spymc.xyz/unban" class="portal-link" target="_blank">Appeal <i class="fas fa-arrow-right"></i></a>
+                <h3 class="portal-title">ALT RULE</h3>
+                <p class="portal-desc">Learn about the alt rule server and toc</p>
+                <a href="https://www.spymc.xyz/altrule" class="portal-link" target="_blank">Alt Rule <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="portal-card">
@@ -396,7 +396,13 @@
                 <p class="portal-desc">Check real-time server status, uptime, and incident reports.</p>
                 <a href="https://www.spymc.xyz/status" class="portal-link" target="_blank">Check Status <i class="fas fa-arrow-right"></i></a>
             </div>
-        </div>
+
+           <div class="portal-card">
+               <div class="portal-icon"><i class="fas fa-crosshairs"></i></div>
+               <h3 class="portal-title">UNBAN APPEAL</h3>
+               <p class="portal-desc">Submit your appeal through our Discord server to request a review of your ban</p>
+               <a href="https://www.spymc.xyz/unban" class="portal-link" target="_blank">Appeal <i class="fas fa-arrow-right"></i></a>
+          </div>
 
         <footer>
             <p>© 2025 SpyMC Network. All rights reserved.</p>
