--- a/status.html
+++ b/status.html
@@ -469,9 +469,9 @@
     <script>
         // Server data
         const servers = {
-            "FFA": "172.65.27.103:33005",
-            "Survival": "51.79.162.191:25566",
-            "Lobby": "172.65.27.103:33002",
+            "SPYMC": "spymc.xyz:25565",
+            "Survival": "127.0. 0.1:25565",
+            "Lobby": "127.0. 0.1:25565",
             "FFA2": "127.0. 0.1:25565",
             "OG": "127.0. 0.1:25565",
             "Other": "127.0. 0.1:25565"
