--- a/search.html
+++ b/search.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="images/logo.png">
     
     <!-- Primary Meta Tags -->
     <title>SpyMC Tier Rankings - Minecraft PvP Player Rankings & Leaderboards</title>
