--- a/status.html
+++ b/status.html
@@ -461,12 +461,9 @@
     <script>
         // Server data
         const servers = {
-            "SPYMC": "spymc.xyz:25565",
-            "Survival": "127.0.0.1:25565",
-            "Lobby": "127.0.0.1:25565",
-            "FFA2": "127.0.0.1:25565",
-            "OG": "127.0.0.1:25565",
-            "Other": "127.0.0.1:25565"
+            "SPYMC [AS]": "spymc.xyz:25565",
+            "SPYMC [EU]": "eu.spymc.xyz:25565",
+            "SPYMC [NA]": "na.spymc.xyz:25565",
         };
 
         // Global variables
